# coffee-management-system-backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  init.sh  pyproject.toml  pytest.ini
coffee/: admin.py  models.py  serializers.py  views.py
coffee/fixtures/: load_coffee.json
coffee/migrations/: 0001_initial.py
customer/: models.py  serializers.py  views.py
customer/migrations/: 0001_initial.py  0002_profile_address.py
inventory/: admin.py  models.py
inventory/migrations/: 0001_initial.py
main/: exception_handler.py  pytest.ini  settings.py  test_case.py  urls.py
order/: admin.py  filter_set.py  models.py  serializers.py  views.py
order/fixtures/: load_table.json
order/management/commands/: load_order.py
order/migrations/: 0001_initial.py  0002_remove_order_customer_remove_order_status_orderitem.py  0002_remove_order_ordered_at_orderitem_ordered_at_and_more.py  0003_alter_orderitem_price.py  0004_table_is_paid_table_status.py
scripts/: run_develop.sh  run_prod.sh
